// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should display image if one is provided 1`] = `
<div
  className="src__StyledFieldset-dd88ty-0 itevEW"
>
  <span
    className="src__StyledLabelText-sc-12l0n4z-0 kRpDqJ"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledError-q8g4f0-0 fExyED"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 fwYUHo"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 bvICLF"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 ihrYjQ"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 fwYUHo"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 bvICLF"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 ihrYjQ"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the default snapshot 1`] = `
<div
  className="src__StyledFieldset-dd88ty-0 iCFEb"
>
  <span
    className="src__StyledLabelText-sc-12l0n4z-0 kRpDqJ"
  >
    Does this test pass?
  </span>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 fwYUHo"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 bvICLF"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 ihrYjQ"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 fwYUHo"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 bvICLF"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 ihrYjQ"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with hint text snapshot 1`] = `
<div
  className="src__StyledFieldset-dd88ty-0 iCFEb"
>
  <span
    className="src__StyledLabelText-sc-12l0n4z-0 kRpDqJ"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledHint-sc-1qn4br2-0 ictSfW"
  >
    Supporting text to help
  </span>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 fwYUHo"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 bvICLF"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 ihrYjQ"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 fwYUHo"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 bvICLF"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 ihrYjQ"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with meta and error snapshot 1`] = `
<div
  className="src__StyledFieldset-dd88ty-0 itevEW"
>
  <span
    className="src__StyledLabelText-sc-12l0n4z-0 kRpDqJ"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledError-q8g4f0-0 fExyED"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 fwYUHo"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 bvICLF"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 ihrYjQ"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 fwYUHo"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 bvICLF"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 ihrYjQ"
      >
        No
      </span>
    </label>
  </div>
</div>
`;
